--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -4,7 +4,7 @@
     <title>App Info</title>
 </head>
 <body>
-    <h1>Super Sigma Shop free from fanum tax</h1>
+    <h1>Etrean Luminant Store</h1>
     <p>Nama App: {{ app_name }}</p>
     <p>Nama: {{ nama }}</p>
     <p>Kelas: {{ kelas }}</p>
