--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -31,7 +31,13 @@
   <button>Add New Product</button>
 </a>
 
-    {% endblock content %}
-</body>
+<a href="{% url 'main:logout' %}">  
+  <button>Logout</button>
+</a>
+
+<h5>Sesi terakhir login: {{ last_login }}</h5>
+
+{% endblock content %}
+
 
 
