--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,23 +1,46 @@
-<head></head>
-    <title>Add New Product</title>
-</head>
-<body>
-    {% extends "base.html" %}
-    {% block content %}
-    <h1>Add New Product</h1>
+{% extends "base.html" %}
 
-    <form method="POST">
-        {% csrf_token %}
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td></td>
-                <td>
-                    <input type="submit" value="Add Product">
-                </td>
-            </tr>
-        </table>
-    </form>
+{% block content %}
+{% include 'navbar.html' %}
 
-    {% endblock content %}
-</body>
+<div class="pt-24"> 
+  <h1>Add New Product</h1>
+
+  <form method="POST">
+      {% csrf_token %}
+      <table class="w-full p-4 rounded-lg" style="background-color: #1e2124;">
+          <tr>
+              <td style="color: #b9bbbe;">Name:</td>
+              <td>
+                  <input id="name" name="name" type="text" required
+                         style="background-color: #1e2124; color: #b9bbbe; border-color: #1e2124; width: 100%;"
+                         placeholder="Enter product name">
+              </td>
+          </tr>
+          <tr>
+              <td style="color: #b9bbbe;">Price:</td>
+              <td>
+                  <input id="price" name="price" type="number" required
+                         style="background-color: #1e2124; color: #b9bbbe; border-color: #1e2124; width: 100%;"
+                         placeholder="Enter product price">
+              </td>
+          </tr>
+          <tr>
+              <td style="color: #b9bbbe;">Description:</td>
+              <td>
+                  <textarea id="description" name="description" required
+                            style="background-color: #1e2124; color: #b9bbbe; border-color: #1e2124; width: 100%;"
+                            placeholder="Enter product description"></textarea>
+              </td>
+          </tr>
+          <tr>
+              <td></td>
+              <td>
+                  <input type="submit" value="Add Product" class="bg-blue-500 text-white font-bold py-2 px-4 rounded mt-4"/>
+              </td>
+          </tr>
+      </table>
+  </form>
+</div>
+
+{% endblock content %}
